--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body{
+    font-family: Arial, Helvetica, sans-serif;
+}
 .listing{
     display: grid;
     grid-template-columns:repeat(auto-fill, minmax(200px, 1fr));
@@ -12,7 +15,7 @@
 }
 
 .listing li h2 {
-    background-color: purple;
+    background-color: rgb(105, 5, 105);
     color: white;
     text-align: center;
     padding: 10px;
